# EDITH

./: .gitignore  README.md  analyze_imports.py  edith_ltm.db  keyboard_test.py  mic_test.py  pyproject.toml  test_webview.py  whisper_test.py
edith/: cli.py  main.py
edith/actions/: browser.py  desktop.py  files.py  system.py
edith/ai/: exceptions.py  llm.py  memory.py  models.py  parser.py  planner.py  prompts.py  validator.py
edith/config/: settings.json  settings.py
edith/core/: assistant.py  dispatcher.py  events.py  health_dashboard.py  lifecycle.py  models.py  orchestrator.py  pipeline.py  registry.py  resolver.py  response.py  session.py  state.py  state_machine.py  telemetry.py
edith/memory/: __init__.py  memory_classifier.py  memory_constants.py  memory_exceptions.py  memory_manager.py  memory_models.py  memory_repository.py  memory_scoring.py  memory_search.py
edith/permission/: __init__.py  confirmation_detector.py  permission_events.py  permission_exceptions.py  permission_manager.py  permission_models.py  permission_policy.py  permission_store.py
edith/ui/: window.py
edith/utils/: logger.py
edith/voice/: __init__.py  audio.py  manager.py  microphone.py  models.py  ptt.py  scheduler.py  sounds.py  stt.py  wake.py
edith/wake/: __init__.py  engine.py
scripts/: edith_cli.py
tests/ai/: test_parser.py  test_planner.py  test_validator.py
tests/core/: test_orchestrator.py  test_pipeline.py
tests/integration/: test_health_dashboard.py  test_pipeline.py
tests/interaction/: __init__.py
tests/memory/: test_memory_manager.py  test_memory_sqlite.py
tests/permission/: test_permission.py  test_pipeline_integration.py
tests/qa/: __init__.py  test_endurance.py  test_race_conditions.py  test_recovery_edge_cases.py  test_ui_saturation.py
tests/sdk/: test_capability_sdk.py
tools/: test_audio.py  test_capabilities.py  test_ollama.py  test_pipeline.py  test_piper.py  test_runtime_audio.py  test_spotify.py  test_ui.py  test_vision.py  test_whisper.py
(+136 files in other folders)
